# shimshady

./: .gitignore  README.md  pyproject.toml
src/shimshady/: __init__.py  __main__.py  cli.py
